Bug 1680955 - Update FallbackGamepad to use new GamepadHandle type r=handyman

Starting with one of my earlier patches in Bug 1657404, FreeBSD started seeing
an error,

```
ld.lld: error: undefined hidden symbol:
  mozilla::dom::SetGamepadLightIndicatorColor
```

We don't build this codepath as part of our regular Firefox testing, and so I
didn't see the issue.

Luckily, Jan Beich <jbeich@FreeBSD.org> noticed the issue and offered up this
patch. They unfortunately can't be given credit because they are protesting
our requirement for 2FA in Phabricator.

Differential Revision: https://phabricator.services.mozilla.com/D98973